[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "andersoned"
version = "0.1.0"
description = "Exact diagonalization and bath fitting tools for the Anderson impurity model"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "scipy>=1.6",
  # matplotlib はオプションにしても OK
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/yourname/andersoned"
